--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -10,5 +10,9 @@ body {
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(rgb(47, 150, 163), rgb(48, 62, 143));
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  color: #fff;
+  background-color: #4158D0;
+  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 }
