--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -1,4 +1,6 @@
 @import './vars';
 @import '../components/main';
+@import '../components/header';
+@import '../components/content';
 @import '../components/location';
 @import '../components/temperature';
