--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -1,18 +1,19 @@
-html {
-  margin: 0;
-  padding: 0;
+* {
   box-sizing: border-box;
 }
 
 body {
-  height: 100vh;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
+  margin: 0;
+  padding: 0;
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   color: #fff;
   background-color: #4158D0;
   background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+}
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 20px;
 }
