--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -4,3 +4,4 @@
 @import '../components/content';
 @import '../components/location';
 @import '../components/temperature';
+@import '../components/summary.scss';
