--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,9 +1,10 @@
 .header {
-  min-height: 120px;
+  min-height: 60px;
   padding: 0 20px;
   text-align: center;
 
   &__title {
+    margin: 0;
     font-size: 40px;
     font-weight: 400;
     line-height: 1.2;
